SERVER-60381 Fix Coverity analysis defect 120845 by initialized _setEof and _fileOffset in file header.

GitOrigin-RevId: 0ca33f3458e65aa3afe16ec780624bc5b2361393